--- a/PolarisResult.html
+++ b/PolarisResult.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Placeholder Page</title>
+    <title>Polaris Results</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -98,7 +98,7 @@
         <div class="popcorn-container"></div>
     </div>
     <!-- Header Section -->
-    <h2>NAME</h2>
+    <h2>POLARIS</h2>
     
     <!-- Main Content Section -->
     <div class="content">
@@ -110,7 +110,7 @@
     </div>
 
     <!-- Button Section -->
-    <button onclick="window.location.href='SCAI.html'">Generate Again!</button>
+    <button onclick="window.location.href='PolarisHome.html'">Generate Again!</button>
 
     <script>
         const popcornContainer = document.querySelector('.popcorn-container');
