--- a/PolarisHome.html
+++ b/PolarisHome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROJECTNAME</title>
+    <title>Polaris Home</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -116,13 +116,13 @@
 
     <!-- Foreground Content -->
     <div class="container">
-        <h1>PROJECTNAME</h1>
+        <h1>POLARIS</h1>
         <label for="actorName">Enter Actor Name:</label>
         <input type="text" id="actorName" placeholder="Name">
         <ul id="nameList">
             <!-- dynamically add list items -->
         </ul>
-        <button onclick="window.location.href='result.html'">Generate!</button>
+        <button onclick="window.location.href='PolarisResult.html'">Generate!</button>
     </div>
 
     <script>
