--- a/PolarisResult.html
+++ b/PolarisResult.html
@@ -110,7 +110,7 @@
     </div>
 
     <!-- Button Section -->
-    <button onclick="window.location.href='PolarisHome.html'">Generate Again!</button>
+    <button onclick="window.location.href='index.html'">Generate Again!</button>
 
     <script>
         const popcornContainer = document.querySelector('.popcorn-container');
